Fixed background image not showing on deployed github page

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav a:focus, a:hover {
 first div in the grid  and place it in the grid. */
 .container > *:first-child {
      grid-column: 1 / -1;
-     background-image: url("/images/header.jpg");
+     background-image: url("../images/header.jpg");
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
